Resolved cart logic bugs and updated swagger docs files
